--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 
 # Ignore Gradle build output directory
 build
+.vscode/settings.json
+app/src/main/java/com/fss/everythingapp/calendar/DateList.txt
+app/src/main/java/com/fss/everythingapp/calendar/UserList.txt
