--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,9 @@ plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
+
 }
+
 
 javafx {
     version = "21.0.7"
@@ -19,8 +21,8 @@ javafx {
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+    mavenLocal()
 }
-
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
@@ -29,6 +31,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+
+    // Add OneBusAway GTFS module
+    implementation 'org.onebusaway:onebusaway-gtfs:1.3.4'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
